--- a/faqpage/faq.html
+++ b/faqpage/faq.html
@@ -16,8 +16,8 @@
                 <!--Replace the # with the links to the other page.-->
                 <!--This makes sure that the navbar is clickable and useful-->
                 <li><a href="#"> Health Tracker </a></li>
-                <li><a href="#"> Journal </a></li>
-                <li><a href="#"> Sexual Orientation Resources </a></li>
+                <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/journalpage/journal.html"> Journal </a></li>
+                <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/homepage/home.html"> Home</a></li>
                 <li><a href="#"> FAQ Page </a></li>
                 <!--I want a login picture. Need to link it -->
                 <li><a href="#"> LOG IN </a></li>
@@ -62,6 +62,24 @@
                     <div class="card-content black-text">
                       <span class="card-title">How do I see a list of resources near me?</span>
                       <p>With an account you will have access to a map that lists tons of different resources that are available to you!</p>
+                    </div>
+                  </div>
+              </div>
+              <div class="row">
+                <div class="col s12 m6">
+                  <div class="card ">
+                    <div class="card-content black-text">
+                      <span class="card-title">Why is mental health important?</span>
+                      <p>Mental health is important because it affects everything. It affects the way you adapt, solve problems, your mood, productivity, etc. </p>
+                    </div>
+                  </div>
+              </div>
+              <div class="row">
+                <div class="col s12 m6">
+                  <div class="card ">
+                    <div class="card-content black-text">
+                      <span class="card-title">How will I know if my insurance can cover this?</span>
+                      <p>Our site will provide you with the location and phone numbers to a plethora of resources near you. You have the choice to checkbox any specific resource that you are looking for.</p>
                     </div>
                   </div>
               </div>
