--- a/homepage/home.html
+++ b/homepage/home.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Health Services</title>
-    <link rel="stylesheet" href="/homepage/home.css">
+    <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 
@@ -18,9 +18,9 @@
                 <!--Replace the # with the links to the other page.-->
                 <!--This makes sure that the navbar is clickable and useful-->
                 <li><a href="#"> Health Tracker </a></li>
-                <li><a href="#"> Journal </a></li>
-                <li><a href="#"> Sexual Orientation Resources </a></li>
-                <li><a href="#"> FAQ Page </a></li>
+                <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/journalpage/journal.html"> Journal </a></li>
+                <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/homepage/home.html"> Home</a></li>
+                <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/faqpage/faq.html#"> FAQ Page </a></li>
                 <!--I want a login picture. Need to link it -->
                 <li><a href="#"> LOG IN </a></li>
                 <li><a href="#"> Sign Up</a></li>
@@ -85,7 +85,7 @@
                     <h5 class="center-align"> Frequently Asked Questions </h5>
                     <p class="faq center-align">
                         <!--The href will make the FAQ clickable.-->
-                        Visit our <a href="#"> FAQ</a> page for additional questions and support.
+                        Visit our <a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/faqpage/faq.html#"> FAQ</a> page for additional questions and support.
                     </p>
                 </div>
 
