3 resource maps added, name chamed to FreeMind

--- a/map/lmft.html
+++ b/map/lmft.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FreeMind Resource Map</title>
+    <title> FreeMind Resource Map</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./map.css">
@@ -11,7 +11,7 @@
     <header class="navbar-official">
       <nav class="Nav-container">
         <div class="new-new">
-          <h2>Behavior Therapy Resources</h2>
+          <h2>Family Therapy Resources</h2>
           
         </div>
   
@@ -35,7 +35,7 @@
       <div id="map" ></div>
       <div id="demo" ></div>
       <div id="sidebar" class="results">
-        <h2>ABA Providers near you:</h2>
+        <h2>Family Therapy Providers near you:</h2>
         <ul id="places"></ul>
         <button style="font-size:24px;color:blue" id="more">Load More <i class="material-icons">local_pharmacy</i></button>
       </div>
@@ -44,6 +44,6 @@
 <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCn-gvMvru5lgLwSVtR1rrejaRC3I1yaHU&libraries=geometry,places&callback=initMap">
 </script>
-<script rel="module" src="./map.js"></script>
+<script rel="module" src="./lmftMap.js"></script>
   </body>
 </html>
