--- a/journalpage/journal.html
+++ b/journalpage/journal.html
@@ -10,7 +10,7 @@
  </head>
  <body>
     <header>
-        <h1> Baymax Resources </h1>
+        <h1> FreeMind </h1>
         <nav class=" green lighten-3">
             <ul class="right">
                 <!--Replace the # with the links to the other page.-->
@@ -19,6 +19,8 @@
                 <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/journalpage/journal.html"> Journal </a></li>
                 <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/homepage/home.html"> Home</a></li>
                 <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/faqpage/faq.html#"> FAQ Page </a></li>
+                 <!--we need to make sure that the user is logged in, in order to view the maps and journal-->
+                 <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/map/map.html">Maps</a></li>
                 <!--I want a login picture. Need to link it -->
                 <li><a href="#"> LOG IN </a></li>
                 <li><a href="#"> Sign Up</a></li>
