finished the loginpage.html, fixed some things on the signup page.

--- a/faqpage/faq.html
+++ b/faqpage/faq.html
@@ -22,7 +22,7 @@
                  <!--we need to make sure that the user is logged in, in order to view the maps and journal-->
                  <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/map/map.html">Maps</a></li>
                 <li><a href="#"> LOG IN </a></li>
-                <li><a href="#"> Sign Up</a></li>
+                <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/signuppage/signup.html#"> Sign Up</a></li>
             </ul>
         </nav>
     </header>
