--- a/map/map.html
+++ b/map/map.html
@@ -17,19 +17,19 @@
             <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/journalpage/journal.html"> Journal </a></li>
             <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/homepage/home.html"> Home</a></li>
             <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/faqpage/faq.html#"> FAQ Page </a></li>
-            <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Maps<i class="material-icons right">arrow_drop_down</i></a></li>
+            <!-- <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Maps<i class="material-icons right">arrow_drop_down</i></a></li> -->
             <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/map/map.html">Maps</a></li>
             <!--I want a login picture. Need to link it -->
             <li><a href="#"> LOG IN </a></li>
-            <li><a href="#"> Sign Up</a></li>
-        </ul>
+            <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/signuppage/signup.html#"> Sign Up</a></li>
+        <!-- </ul>
         <ul id="dropdown1" class="dropdown-content">
           <li><a href="#!">Lgbt therapy</a></li>
           <li class="divider"></li>
           <li><a href="#!">lmft therapy</a></li>
           <li class="divider"></li>
           <li><a href="#!">behavior therapy</a></li>
-        </ul>
+        </ul> -->
     </nav>
 </header>
   <body>
