--- a/signuppage/signup.html
+++ b/signuppage/signup.html
@@ -20,25 +20,26 @@
             <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/homepage/home.html"> Home</a></li>
             <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/faqpage/faq.html#"> FAQ Page </a>
             </li>
-            <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Maps<i
-                        class="material-icons right">arrow_drop_down</i></a></li>
+            <!-- <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Maps<i
+                        class="material-icons right">arrow_drop_down</i></a></li> -->
             <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/map/map.html">Maps</a></li>
             <!--I want a login picture. Need to link it -->
             <li><a href="#"> LOG IN </a></li>
-            <li><a href="#"> Sign Up</a></li>
+            <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/signuppage/signup.html#"> Sign Up</a></li>
         </ul>
-        <ul id="dropdown1" class="dropdown-content">
+        <!-- This is for the dropdown menu -->
+        <!-- <ul id="dropdown1" class="dropdown-content">
             <li><a href="#!">Lgbt therapy</a></li>
             <li class="divider"></li>
             <li><a href="#!">lmft therapy</a></li>
             <li class="divider"></li>
-            <li><a href="#!">behavior therapy</a></li>
+            <li><a href="#!">behavior therapy</a></li> -->
         </ul>
     </nav>
 </header>
 
 <body>
-    <h2 class="center-align"> Login to get exclusive access! </h2>
+    <h2 class="center-align"> Signing up is Free! </h2>
     <div class="row center-align">
     <div class="row col s12 m6 ">
             <div class="card white center-align ">
@@ -54,6 +55,10 @@
                                     <input placeholder="Last Name" id="last_name" type="text" class="validate">
                                     <label for="last_name"></label>
                                 </div>
+                                <div class="input-field col s6">
+                                    <input placeholder="Username" id="userName" type="text" class="validate" data-length="15">
+                                    <label for="user_name"></label>
+                                  </div>
                             </div>
                             <div class="row">
                                 <div class="input-field col s12">
