--- a/journalpage/journal.html
+++ b/journalpage/journal.html
@@ -23,7 +23,7 @@
                  <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/map/map.html">Maps</a></li>
                 <!--I want a login picture. Need to link it -->
                 <li><a href="#"> LOG IN </a></li>
-                <li><a href="#"> Sign Up</a></li>
+                <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/signuppage/signup.html#"> Sign Up</a></li>
             </ul>
         </nav>
     </header>
