--- a/public/html/home.html
+++ b/public/html/home.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FreeMind Health Services</title>
-    <link rel="stylesheet" href="/public/css/home.css">
+    <title>Health Services</title>
+    <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 
@@ -17,13 +17,15 @@
             <ul class="right">
                 <!--Replace the # with the links to the other page.-->
                 <!--This makes sure that the navbar is clickable and useful-->
-                <li><a href="/public/html/home.html"> Home</a></li>
-                <li><a href="/public/html/journal.html"> Journal </a></li>
-                <li><a href="/public/html/map.html">Provider finder Maps</a></li>                
-                <li><a href="/public/html/faq.html"> FAQ Page </a></li>
-                 <!--we need to make sure that the user is logged in, in order to view the maps and journal-->
-                <li><a href="/public/html/login.html"> Log in </a></li>
-                <li><a href="/public/html/signup.html"> Sign Up</a></li>
+                <li><a href="#"> Health Tracker </a></li>
+                <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/journalpage/journal.html"> Journal </a></li>
+                <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/homepage/home.html"> Home</a></li>
+                <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/faqpage/faq.html#"> FAQ Page </a></li>
+               <!--we need to make sure that the user is logged in, in order to view the maps and journal-->
+                <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/map/map.html">Maps</a></li>
+                <!--I want a login picture. Need to link it -->
+                <li><a href="#"> LOG IN </a></li>
+                <li><a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/signuppage/signup.html"> Sign Up</a></li>
             </ul>
         </nav>
     </header>
@@ -32,7 +34,7 @@
         <section>
             <article>
                 <div class="photoContainer">
-                    <img src="/assets/images/counselingPhoto.jpg" alt="main background photo for the home page.">
+                    <img src="./images/counselingPhoto.jpg" alt="main background photo for the home page.">
                 </div>
                 <h2 class="card-panel teal darken-2 center-align"> Start Getting the help you need and deserve! </h2>
                 <div>
@@ -65,7 +67,7 @@
                             <div class="col s12 m7">
                                 <div class="card ">
                                     <div class="card-image">
-                                        <img src="/assets/images/mapimage.jpg">
+                                        <img src="./images/mapimage.jpg">
                                         <span class="card-title"></span>
                                     </div>
                                     <div class="card-content">
@@ -85,7 +87,7 @@
                     <h5 class="center-align"> Frequently Asked Questions </h5>
                     <p class="faq center-align">
                         <!--The href will make the FAQ clickable.-->
-                        Visit our <a href="/public/html/faq.html"> FAQ</a> page for additional questions and support.
+                        Visit our <a href="file:///C:/Users/ddew8/Desktop/project-2/health-resources/faqpage/faq.html#"> FAQ</a> page for additional questions and support.
                     </p>
                 </div>
 
